--- a/manifest.json
+++ b/manifest.json
@@ -287,6 +287,7 @@
       "required": false,
       "dependencies": [],
       "is_folder": true,
+      "display_name": "HollywoodFX",
       "note": "Test New",
       "link": "Enter link here"
     },
