--- a/manifest.json
+++ b/manifest.json
@@ -288,7 +288,7 @@
       "dependencies": [],
       "is_folder": true,
       "display_name": "HollywoodFX",
-      "note": "Test New",
+      "note": "Test NEWNew",
       "link": "Enter link here"
     },
     "IcyClawz.CustomInteractions.dll": {
